--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
-    "generate": "nuxt generate"
+    "generate": "nuxt generate",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "core-js": "^3.15.1",
@@ -15,6 +16,7 @@
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^4.2.0",
     "fibers": "^5.0.0",
+    "gh-pages": "^3.2.3",
     "postcss": "^8.3.5",
     "sass": "^1.39.2",
     "sass-loader": "^10.2.0"
