--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
-    "deploy": "gh-pages -d dist --dotfiles"
+    "deploy": "push-dir --dir=build --branch=gh-pages"
   },
   "dependencies": {
     "core-js": "^3.15.1",
